k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moath-webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/dev/a(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-a-moath
            port:
              number: 80

      - path: /api/dev/b(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-b-moath
            port:
              number: 80
